[gd_scene load_steps=2 format=3 uid="uid://df5r2mmuhcwnq"]

[ext_resource type="Script" path="res://Code/Player/Player_selection_menu.gd" id="1"]

[node name="Player_selection_menu" type="Node2D"]
script = ExtResource("1")

[node name="Position2D" type="Marker2D" parent="."]
position = Vector2(-105, -8)

[node name="Powerful" type="Button" parent="Position2D"]
anchors_preset = 10
anchor_right = 1.0
toggle_mode = true
text = "PPPP"

[node name="Wizard" type="Button" parent="Position2D"]
offset_left = 100.0
offset_right = 184.0
offset_bottom = 31.0
toggle_mode = true
text = "WWWWW"

[node name="Shotgun" type="Button" parent="Position2D"]
offset_left = 200.0
offset_right = 279.0
offset_bottom = 31.0
toggle_mode = true
text = "SSSSSSSS"

[connection signal="pressed" from="Position2D/Powerful" to="." method="_on_Powerful_pressed"]
[connection signal="pressed" from="Position2D/Wizard" to="." method="_on_Wizard_pressed"]
[connection signal="pressed" from="Position2D/Shotgun" to="." method="_on_Shotgun_pressed"]
